--- a/SantaseCardGame/Clients/SantaseCardGame.Client.Web/Components/PlayerComponent.razor
+++ b/SantaseCardGame/Clients/SantaseCardGame.Client.Web/Components/PlayerComponent.razor
@@ -27,6 +27,11 @@
     }
 </div>
 
+@if (IsCurrentPlayer)
+{
+    <button class="btn btn-warning" id="SaveGameBtn" @onclick="@(() => OnSaveGame.InvokeAsync())">Save Game</button>
+}
+
 <div class="message-component" id="Message-Player-@Player.Position"></div>
 
 @code {
@@ -35,6 +40,9 @@
 
     [Parameter]
     public bool IsCurrentPlayer { get; set; }
+
+    [Parameter]
+    public EventCallback OnSaveGame { get; set; }
 
     protected override void OnInitialized()
     {
