Clear application states when game ends

--- a/SantaseCardGame/Clients/SantaseCardGame.Client.Web/Components/TrickComponent.razor
+++ b/SantaseCardGame/Clients/SantaseCardGame.Client.Web/Components/TrickComponent.razor
@@ -24,6 +24,8 @@
     protected override void OnInitialized()
     {
         TrickState.OnDisplay += DisplayTrick;
+
+        DisplayTrick();
     }
 
     public void Dispose()
