--- a/SantaseCardGame/Clients/SantaseCardGame.Client.Web/Pages/LoadGame.razor
+++ b/SantaseCardGame/Clients/SantaseCardGame.Client.Web/Pages/LoadGame.razor
@@ -58,6 +58,7 @@
 
     protected override async Task OnInitializedAsync()
     {
+        selectedGameId = string.Empty;
         games = await GameLoader.GetSavedGames();
     }
 
