--- a/SantaseCardGame/Clients/SantaseCardGame.Client.Web/Pages/Index.razor
+++ b/SantaseCardGame/Clients/SantaseCardGame.Client.Web/Pages/Index.razor
@@ -1,9 +1,31 @@
 ﻿@page "/"
-
-<PageTitle>Index</PageTitle>
-
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+ 
+<div class="row">
+   <div class="col-4">
+       <div class="card" style="width: 25rem; height: 22rem;">
+           <img src="/images//Play_vs_AI.jpg" class="card-img-top" alt="Play vs AI"  >
+           <div class="card-body">
+               <h5 class="card-title">Play vs AI</h5>
+               <p class="card-text">Santase (also known as 66, Sixty-Six) is a classic card game for 2 players with a deck of 24 cards. Check the rules and start playing.</p>
+           </div>
+       </div>
+   </div>
+   <div class="col-4">
+       <div class="card" style="width: 25rem; height: 22rem;">
+           <img src="/images//Save_game.jpg" class="card-img-top" alt="Save Your Game">
+           <div class="card-body">
+               <h5 class="card-title">Save Your Game</h5>
+               <p class="card-text">You can save your game at any time and come back later to finish it. A maximum of 5 saved games are allowed.</p>
+           </div>
+       </div>
+   </div>
+   <div class="col-4">
+       <div class="card" style="width: 25rem; height: 22rem;">
+           <img src="/images//Mobile_And_Multiplayer.jpg" class="card-img-top" alt="Mobile and Multiplayer">
+           <div class="card-body">
+               <h5 class="card-title">Mobile and Multiplayer</h5>
+               <p class="card-text">Mobile and Multiplayer versions of the Santase Card Game are expected at a later stage, follow me on <a href="https://github.com/itplamen" target="_blank">GitHub (itplamen)</a>.</p>
+           </div>
+       </div>
+   </div>
+</div>
