--- a/SantaseCardGame/Clients/SantaseCardGame.Client.Web/Pages/LoadGame.razor
+++ b/SantaseCardGame/Clients/SantaseCardGame.Client.Web/Pages/LoadGame.razor
@@ -17,7 +17,7 @@
                 <th>Type</th>
                 <th>Round</th>
                 <th>Points</th>
-                <th>Trump Suit</th>
+                <th>Trump</th>
                 <th></th>
             </tr>
             @if (games != null && games.Any())
