--- a/SantaseCardGame/Clients/SantaseCardGame.Client.Web/Shared/MainLayout.razor
+++ b/SantaseCardGame/Clients/SantaseCardGame.Client.Web/Shared/MainLayout.razor
@@ -7,6 +7,7 @@
             <NavLink class="nav-link" href="singleplayer">New Game</NavLink>
             <NavLink class="nav-link" href="loadgame">Load Game</NavLink>
             <NavLink class="nav-link" href="rules">Rules</NavLink>
+            <NavLink class="nav-link" href="https://github.com/itplamen/SantaseCardGame" target="_blank">About</NavLink>
         </div>
 
         <article class="content px-4">
