--- a/SantaseCardGame/Clients/SantaseCardGame.Client.Web/Pages/Rules.razor
+++ b/SantaseCardGame/Clients/SantaseCardGame.Client.Web/Pages/Rules.razor
@@ -1,35 +1,34 @@
 ﻿@page "/rules"
 
-<h3>Points In The Santase Card Game Sixty-Six</h3>
+<div id="Rules" class="alert alert-secondary">
+    <h4>Points In The Santase Card Game Sixty-Six</h4>
 
-<p>The ranks and values of the cards are as follows:</p>
-<ul>
-    <li>Ace - 11 points</li>
-    <li>Ten – 10 points</li>
-    <li>King – 4 points</li>
-    <li>Queen – 3 points</li>
-    <li>Jack – 2 points</li>
-    <li>9 – 0 points</li>
-</ul>
+    <p>The ranks and values of the cards are as follows:</p>
+    <ul>
+        <li>Ace - 11 points</li>
+        <li>Ten – 10 points</li>
+        <li>King – 4 points</li>
+        <li>Queen – 3 points</li>
+        <li>Jack – 2 points</li>
+        <li>9 – 0 points</li>
+    </ul>
 
-<p>Winning a round gives you:</p>
-<ul>
-    <li>3 points if the opponent has 0 tricks won</li>
-    <li>2 points if the opponent’s score is below 33</li>
-    <li>1 point if the opponent’s score is 33 or more</li>
-</ul>
+    <p>Winning a round gives you:</p>
+    <ul>
+        <li>3 points if the opponent has 0 tricks won</li>
+        <li>2 points if the opponent’s score is below 33</li>
+        <li>1 point if the opponent’s score is 33 or more</li>
+    </ul>
 
-<h3>How To Play</h3>
+    <h4>How To Play</h4>
 
-<p>You score points by winning tricks. Another way to score points is to match pairs of Kings and Queens, which, once declared, grant you a bonus of 20 or 40 points. 
-You can announce 20/40 only during the first 6 tricks won. When the pile is gone, declarations are allowed. During the deal, six cards are dealt to each player. 
-The remaining cards serve as a talon. You are not required to follow suit until all cards of the talon are dealt. But once the undealt cards are closed you must follow suit.
-A player may close the talon if he believes that the cards in his hand are strong enough to win the remaining tricks and reach 66 points. During this time the players must follow suit if possible, otherwise trump.
-The player who holds the lowest trump card (the 9) could exchange it for the trump that is turned up during his turn to lead. The exchange could occur as long as there 
-are more than 2 cards remaining in the talon. If a player believes that he has 66 points and declares it (only after winning a trick or after matching pairs of K and Q), the play stops immediately. 
-If the player is right and has more than 66 points, he wins the hand. Otherwise, points are distributed to the opponent instead.</p>
+    <p>You score points by winning tricks or by matching pairs of Kings and Queens, which, once declared, grant you a bonus of 20 or 40 points. 
+    You can announce 20/40 only during the first 6 tricks won. When the pile is gone, declarations are allowed. During the deal, six cards are dealt to each player. 
+    The remaining cards serve as a talon. You are not required to follow suit until all cards of the talon are dealt. But once the undealt cards are closed you must follow suit.
+    A player may close the talon if he believes that the cards in his hand are strong enough to win the remaining tricks and reach 66 points. During this time the players must follow suit if possible, otherwise trump.
+    The player who holds the lowest trump card (the 9) could exchange it for the trump that is turned up during his turn to lead. The exchange could occur as long as there 
+    are more than 2 cards remaining in the talon. If a player believes that he has 66 points and declares it (only after winning a trick or after matching pairs of K and Q), the play stops immediately. 
+    If the player is right and has more than 66 points, he wins the hand. Otherwise, points are distributed to the opponent instead.</p>
 
-<p id="Rules">More: <a href="https://en.wikipedia.org/wiki/Sixty-Six_(card_game)" target="_blank">Here</a>.</p>
-@code {
-
-}
+    <p id="MoreRules">More: <a href="https://en.wikipedia.org/wiki/Sixty-Six_(card_game)" target="_blank">Here</a>.</p>
+</div>
