Fixed 404 img not found

--- a/SantaseCardGame/Clients/SantaseCardGame.Client.Web/Components/PlayerComponent.razor
+++ b/SantaseCardGame/Clients/SantaseCardGame.Client.Web/Components/PlayerComponent.razor
@@ -7,7 +7,7 @@
 @if (IsCurrentPlayer)
 {
     <div id="PlayerInfo">
-        <img src="/images/common/player.png" alt="PlayerImage" id="PlayerImage" />
+        <img src="/images/common/Player.png" alt="PlayerImage" id="PlayerImage" />
         <div id="Username">@Player.Username</div>
         <div id="Points">@Player.Points</div>
     </div>
