--- a/SantaseCardGame/Clients/SantaseCardGame.Client.Web/wwwroot/css/app.css
+++ b/SantaseCardGame/Clients/SantaseCardGame.Client.Web/wwwroot/css/app.css
@@ -194,6 +194,11 @@ a, .btn-link {
     position: absolute;
 }
 
+#SaveGameBtn {
+    position: absolute; 
+    top: 220px;
+}
+
 #PlayerInfo {
     bottom: 8%;
 }
